k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: network-security
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "150"
    cert-manager.io/cluster-issuer: letsencrypt-prod   # cert-manager o'rnatilgan bo'lsa
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["security-dashboard.company.local", "security-agent-api.company.local"]
      secretName: network-security-tls
  rules:
    - host: security-dashboard.company.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
    - host: security-agent-api.company.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent-api
                port:
                  number: 8443
